--- a/notes.sty
+++ b/notes.sty
@@ -117,6 +117,7 @@ Last Revision: \today
 \newcommand{\ba}{\bra{\alpha}}
 \newcommand{\bb}{\bra{\beta}}
 \newcommand{\bg}{\bra{\gamma}}
+\newcommand{\bx}{\bra{x}}
 \newcommand{\ka}{\left| \alpha \rangle \right.}
 \newcommand{\kb}{\left| \beta \rangle \right.}
 \newcommand{\kg}{\left| \gamma \rangle \right.}
@@ -125,6 +126,7 @@ Last Revision: \today
 \newcommand{\bm}{\bra{-}}
 \newcommand{\kp}{\ket{+}}
 \newcommand{\km}{\ket{-}}
+\newcommand{\kx}{\ket{x}}
 \newcommand{\kplx}{\ket{+}_x}
 \newcommand{\kmix}{\ket{-}_x}
 \newcommand{\kply}{\ket{+}_y}
