--- a/phys234/phys234.tex
+++ b/phys234/phys234.tex
@@ -2000,7 +2000,7 @@
       Classically bound ($E$ inside well) implies quantised states (boundary conditions on eiether side).\newline
       Classically unbound ($E$ above well) implies a continuous spectrum of energy eigenstates (no quantisation). \newline
 
-      Consider the simolest example of a finite potential well
+      Consider the simplest example of a finite potential well
 
       \begin{itemize}
         \item define well symmetry about $x = 0$
@@ -2013,14 +2013,58 @@
       \[ \mbox{Region I and III: } \ \ \ \ \ \f{d^2\psi_E(x)}{dx^2} = -k_1^2\psi_E(x) \ \ \ \ \ \ \ k_1 = \f{\sqrt{2mE}}{\hbar} \]
       \[ \mbox{Region II: } \ \ \ \ \ \f{d^2\psi_E(x)}{dx^2} = -k_2^2\psi_E(x) \ \ \ \ \ \ \ k_2 = \f{\sqrt{2m(E+V_0)}}{\hbar} \]
 
-      In both cases $k_1$ and $k_2$ are REAL, then $k_1^2$ and $k_2^2$ are positive. General solutions are complex exponents sinusoids. Qualitatively we have already seen that the effect of the change in potential is a change in wavevector, $k$ (see above, on Harmonic Oscillator eigenstates). $\implies$ a change in wavelength of the wavefunction.
+      In both cases $k_1$ and $k_2$ are REAL, then $k_1^2$ and $k_2^2$ are positive. General solutions are complex exponents sinusoids. Qualitatively we have already seen that the effect of the change in potential is a change in wavevector, $k$ (see above, on Harmonic Oscillator eigenstates). $\implies$ a change in wavelength of the wavefunction.\newline
 
       % For these interactions between two particles, we typically only require relative amplitudes before and after interactions (e.g, $\f{|A|^2}{|B|^2}$) and travelling wave interpretation in sufficient
 
+      Outside of a potential energy well, we can make the observation that the potential energy will be higher and the kinetic energy lower; therefore any particle in that space will have less momentum and a longer wavelength. Conversely, within the box the P.E. will be lower, K.E., highwe, and so we have a larger momentum and short wavelength. This means the probablity amplitudes are larger just outside the box than inside the box.\newline
 
+      The general solutions for $\psi_E(x)$ are
 
+      \[ \mbox{I :} \ \ \ A\expo{+ik_1x} + B\expo{-ik_1x} \]
+      \[ \mbox{II :} \ \ \ C\expo{+ik_2x} + D\expo{-ik_2x} \]
+      \[ \mbox{III :} \ \ \ F\expo{+ik_1x} + G\expo{-ik_1x} \]
 
+      In principle there are 7 unknowns (including $E$) to solve for. We need to impose the continuity of $\psi(x)$ and $\f{d\psi}{dx}$ at boundaries of the well (4 equations). \newline
 
+      \subsubsection{Consider Scattering Problems}
+
+        \begin{itemize}
+          \item Describes interaction between two particles and how it affects their motion
+          \item Consider 1 particle to be fixed, the other incident, and the potential energy function describes their interaction
+        \end{itemize}
+
+        Treat $E$ as a starting condition for the incoming particle (continuous spectrum). In 1D, we consider the two possibilities of \textbf{transmission} beyond the well, or \textbf{reflection} back by well. \newline
+
+        In this case consider a particle incident from $-\infty$ travelling in the $x$-direction, with energy $E > 0$. There are two possibilities in the potential well,
+        \begin{itemize}
+          \item[1.] Reflected back
+          \item[2.] Transmitted beyond
+        \end{itemize}
+        In Region I, we require incoming and reflected particles so we associate $A(+vek)$ with incident, $B(-vek)$ with reflected.
+        In Region III, we require transmitted particles, and so we associate $F(+vek)$ with transmission, and set $G = 0$, since there is nothing beyond $x = +a$ to reflect any particles.\newline
+
+        We will also define a \textbf{reflection coefficient} $R = \pr{\f{B}{A}}$, which is the probability that the plate is reflected by the well. Additionally we'll define a \textbf{transmission} coefficient $T=\pr{\f{F}{A}}$, the probability that the particle is transmitted by the well.\newline
+
+        We now use the continuity of $\psi(x)$ and $\f{d\psi}{dx}$ at $x = +a$ and $x = -a$ to generate 4 equations. For example,
+
+        \[ \psi_E(x=-a) : A\expo{-ik_1a} + B\expo{+ik_1a} = C\expo{-ik_2a}+D\expo{+ik_2a} \ \ \  \ \ \ \ \ \ (1) \]
+
+        These can be used to find the ratios $\f{F}{A}$ and $\f{B}{A}$. Doing this, we find that
+
+        \[ T = \pr{\f{F}{A}} = \left[ 1 + \f{V_0^2}{\psi_E(E+V_0)}\sin^2 \left( \f{2a}{\hbar} \sqrt{2m(E+V_0)} \right) \right]^{-1} \]
+        and
+        \[ R = \pr{\f{B}{A}} = \left[ 1 + \f{4k_1^2k_2^2}{(k_1^2-k_2^2)\sin(2k_2a)} \right]^{-1} \]
+
+        $R + T = 1$ since the particle is either transmitted or reflected.
+
+        \begin{note} \
+          \begin{itemize}
+            \item[1.] $T \longrightarrow 1$ as $E >> V_0$ - the well becomes insignificant.
+            \item[2.] $T = 1$ at particular value of $E$, this means we have resonance. From the expression for $T$, this occurs when $\sin (\cdots)$ is zero (that is, when $2k_2a = n \pi$). If we use $k_2 = \f{2\pi}{\lambda_2}$ then $2a=\f{n\lambda_2}{2}$, i.e., the well contains an integer number of half wavelengths. $\left(\f{1}{2}\lambda\right)$. In the end, this occurs as a result of forward waves interfering constructively and reflected waves inteffering destructively - analogous phenomena occur in optics.
+            \item[3.] $R \not = 0$ unless $E$ is in resonance or as $E >> V_0$. This is counter to our classical expectation.
+          \end{itemize}
+        \end{note}
 
     % TODO
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -2189,5 +2233,92 @@
             \includegraphics[width=0.8\textwidth]{axiom3_exmp.jpg}
             \caption{Example}
       \end{figure}
+
+      \subsection{Last Tutorial?}
+
+        \begin{thrm}
+          If $\forall x: V(x) = V(-x)$ then the energy eigenfunctions have definite parity.
+        \end{thrm}
+
+        Consider some well that goes from $-a/2$ to $a/2$; inside we have
+
+        \[ V(x) = \piecewise{0}{$-a/2 < x < a/2$}{\infty}{otherwise} \]
+
+        Then in the inside region $II$ we have the wavefunction $\psi_{II}(x) = \psi(x)$, in the other two regions we have $\psi_{I} = 0$ and $\psi_{III}(x) = 0$. They are 0 because you can't be there when there's infinite energy. Note also that
+        \[ \pr{\psi(x)} dx \]
+        is the probability of being found in $dx$. Now, to find $\psi(x)$ we need to solve the Shroedinger Equation as usual,
+
+        \[ \f{-\hbar^2}{2m} \f{d^2}{dx^2} \psi(x) = E\psi(x) \implies \f{d^2}{dx^2} \psi(x) = -k^2\psi(x)\]
+
+        The solutions involve complex exponentials;
+
+        \[ \psi(x) = A\cos kx + B\sin kx \]
+
+        We break it up into conditions. The first is that we have an even function, then
+
+        \[ \psi(x) = A\cos kx \]
+
+        Then we \textbf{demand} that
+
+        \[ \int_{-\infty}^{\infty} \pr{\psi_{TOTAL}} dx = |A|^2 \int_{-a/2}^{a/2}\cos^2 (kx) dx = \f{|A|^2}{2} \left[ \int_{-a/2}^{a/2} dx + \int_{-a/2}^{a/2}\cos (2kx) dx \right] \]
+
+        So that means
+
+        \[ 1 = \f{|A|^2}{2} a \implies A = \sqrt{\f{2}{a}} \]
+
+        We also require that at $x = +a/2$ that
+
+        \[ \psi_{III}(a/2) = \psi(a/2) = \sqrt{\f{2}{a}}\cos \left( \f{ka}{2} \right) \implies k = \f{n\pi}{a} \]
+
+        For $n = 1, 3,5,\ldots$. So,
+
+        \[ \boxed{\psi(x) = \sqrt{\f{2}{a}}\cos \left( \f{n\pi x}{a} \right)  \ \ \ \ \ \ E_n = \f{n^2\pi^2\hbar^2}{2ma^2} \ \ \ \ \ n \mbox{ is odd}} \]
+
+        Similarly for the odd case,
+
+        \[ \boxed{\psi(x) = \sqrt{\f{2}{a}}\sin \left( \f{n\pi x}{a} \right)  \ \ \ \ \ \ E_n = \f{n^2\pi^2\hbar^2}{2ma^2} \ \ \ \ \ n \mbox{ is even}} \]
+
+        Symmetric. Infinite Potential Well of length $L$,
+
+        \[ \psi_n^L(x) \ \ \ \ \mbox{$n$-th energy eigenfunction for well of length $L$} \]
+
+        For example,
+
+        \[ \psi_3^a = \sqrt{\f{2}{a}} \cos \left( \f{3\pi x}{a} \right)\]
+
+        \begin{exmp}
+          Consider some initial state
+          \[ \ket{\psi_1^a(x)} \]
+          Then, instantaneously, the well expands by a factor of 2. At the start we have a well from $-a/2$ to $a/2$ and then \textit{all of a sudden}, the bounds are $-a$ and $a$. After expansion of the well, what is the probability to measure the system to be in the \textit{now} ground energy eigenstate $\ket{\psi_1^{2a}}$?
+        \end{exmp}
+
+        \begin{defn}[Born Rule]\label{Born Rule}
+        \[ H = H^\dagger = \sum_{n=1}^{\infty} \ket{E_n^{\mbox{now}}}E_n\bra{E_n^{\mbox{now}}} \]
+        \end{defn}
+
+        So we have
+
+        \[ pr(\mbox{measure new ground state}|\psi_1^a) = \pr{\braket{\psi_1^{2a}}{\psi_1^a}} \]
+
+        Then,
+
+        \[ \braket{\psi_1^{2a}}{\psi_1^a} = \braket{\psi_1^{2a}}{\mathbb{1}\psi_1^a} \ \ \ \ \ \mbox{and} \ \ \ \ \ \mathbb{1} = \int_{-\infty}^{\infty} \ket{x}\bra{x} dx \]
+
+        So,
+
+        \begin{align*}
+          \braket{\psi_1^{2a}}{\psi_1^a} & = \braket{\psi_1^{2a}}{\mathbb{1}\psi_1^a} \\
+          & = \int_{-\infty}^{\infty} \braket{\psi_1^{2a}}{x}\braket{x}{\psi_1^a} dx \\
+          & = \int_{-\infty}^{\infty}\psi_1^{2a}(x)\psi_1^a(x) dx \\
+          & = \int_{-a/2}^{a/2} \sqrt{\f{1}{a}} \cos \left( \f{\pi x}{2a} \right) \sqrt{\f{2}{a}} \cos \left( \f{\pi x}{2} \right) dx \\
+          & = \f{\sqrt{2}}{a} \int_{-a/2}^{a/2} \cos \left( \f{\pi x}{2a} \right) \cos \left( \f{\pi x}{a} \right) dx \\
+          & = \f{8}{3\pi}
+        \end{align*}
+
+        (Solve that). Next, for
+
+        \[ pr \left( \mbox{measuring }\psi_m^{2a} | \mbox{initial }\psi_n^a \right) \ \ \ \ \ m \mbox{ is even}, n \mbox{ is odd} \]
+
+
 
   \end{document}
